# BineuralBeatGenerator

./: CMakeLists.txt  README.md
src/: main.c  noiseGenerator.c  noiseGenerator.h  saveOperations.c  saveOperations.h  scalarOperations.c  scalarOperations.h  waveGenerator.c  waveGenerator.h
